time-dashboard/styles.css
:root{ 				/*primary colors*/
	--blue: hsl(246, 80%, 60%);
	--light-red: hsl(15, 100%, 70%);  /*work*/
	--soft-blue: hsl(195, 74%, 62%);/*play*/
	--study: hsl(348, 100%, 68%);
	--lime-green: hsl(145, 58%, 55%); /*exercise*/
	--violet: hsl(264, 64%, 52%); /*social*/
	--soft-orange: hsl(43, 84%, 65%); /*self-care*/

						/*Neutral*/
	--very-dark-blue: hsl(226, 43%, 10%);
	--dark-blue: hsl(235, 46%, 20%);
	--desaturated-blue: hsl(235, 45%, 61%);
	--pale-blue: hsl(236, 100%, 87%);
}
body{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	width: 100%;
	height: 100%;
	background-color: var(--very-dark-blue);
	font-family: 'Rubik', sans-serif;
	color: white;
}
#page-container{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100vh;
}

#dashboard{
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-template-rows: repeat(2, 1fr );
	grid-column-gap: 20px;
	grid-row-gap: 20px;
	width: 100%;
	height: 100%;
	justify-content: center;




}
#menu{
	grid-column: 1/1;
	grid-row: 1/3;
	padding-right: 2px;
	padding-left: 2px;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	background-color: var(--dark-blue);
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;

	

}
#dashboard-profile{
	background-color: var(--blue);
	padding: 30px 40px 20px 20px;
	border-radius: 10px;
	
}
#dashboard-profile h1{
	width: 100px;
	font-size: x-large;
	font-weight: 300;
	margin-top: 0;
	

}
#dashboard-profile p{
	margin: 0;
	margin-top: 20px;
	margin-bottom: 10px;
	font-size: x-small;
	font-weight: 300;
	color: var(--pale-blue);
}
#user-photo{
	width: 50px;
	border: 2px solid white;
	border-radius: 50%;
}
#dashboard-nav{
	background-color: var(--dark-blue);
	padding: 0;
	padding-left: 20px;
	padding-bottom: 20px;
}
#dashboard-nav ul{
	list-style: none;
	margin: 0;
	margin-top: 20px;
	padding: 0;
}
#dashboard-nav li:not(:last-child){
	margin-bottom: 5px;
}

.nav-link {
	text-decoration: none;
	color: var(--desaturated-blue);
	font-size: small;
	font-weight: 300;
}
.nav-link:hover{
	color: white;
	transition-duration: 0.4s;

}

.dashboard-card{
	display: flex;
	flex-direction: column;
	background-color: var(--dark-blue);
	border-radius: 10px;
	position: relative;



} 
.card-top-bg{
	width: 100%;
	height: 40%;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	

}
.work-card{       
	background-color: var(--light-red);
}
.work{
	background: var(--light-red) url(./images/icon-work.svg) no-repeat;
	background-position: top right;
	background-size: 50px;
	
}
.play-card{
	background-color: var(--soft-blue);
}
.play{
	background: var(--soft-blue) url(./images/icon-play.svg) no-repeat;
	background-position: top right;
	background-size: 50px;

}
.study-card{
	background-color: var(--study);
}
.study{
	background: var(--study) url(./images/icon-study.svg) no-repeat;
	background-position: top right;
	background-size: 50px;
}
.exercise-card{
	background-color: var(--lime-green);
}
.exercise{
	background: var(--lime-green) url(./images/icon-exercise.svg) no-repeat;
	background-position: top right;
	background-size: 50px;
}
.social-card{
	background-color: var(--violet);
}
.social{
	background: var(--violet) url(./images/icon-social.svg) no-repeat;
	background-position: top right;
	background-size: 50px;
}
.care-card{
	background-color: var(--soft-orange);
}
.care{
	background: var(--soft-orange) url(./images/icon-self-care.svg) no-repeat;
	background-position: top right;
	background-size: 50px;
}
.card-header{
	background-color: var(--dark-blue);
	border-top-left-radius: 15px;
	border-top-right-radius: 15px;
	padding-top: 10px;
	display: flex;
	justify-content: space-between;
	padding-left: 20px;
	padding-right: 20px;
	margin: 0;

}

.card-header img{
	width: 10px;
	height: 5px;
	align-self: center;


}
.card-header p{
	font-size: small;

}
.card-body{
	background-color: var(--dark-blue);
	display: flex;
	flex-direction: column;
	padding-left: 20px;
	padding-right: 20px;
	height: 100%;
	border-bottom-right-radius: 10px;
	border-bottom-left-radius: 10px;
	margin: 0;


}
.dashboard-card:hover  .card-header{
	background-color: hsl(235, 46%, 35%);
	transition-duration: 0.5s;
	cursor: pointer;
}
.dashboard-card:hover  .card-body{
	background-color: hsl(235, 46%, 35%);
	transition-duration: 0.5s;
	cursor: pointer;

}
.card-time{
	font-size: xx-large;
	font-weight: 300;
	margin: 0;
	margin-bottom: 5px;

}
.previous{
	font-size: x-small;
	font-weight: 500;
	color: var(--desaturated-blue);
	margin: 0;
}
.active-link{
	color: white;
}
#credits p{
	margin-top: 100px;
	color: var(--pale-blue);
}
#credits a{
	text-decoration: none;
	color: var(--blue);
}
/*------- mobile media queries------------*/


@media screen and (max-width: 750px){
	#page-container{
		height: 100%;
	}
	#dashboard{
	grid-template-columns: repeat(2, 1fr);
	grid-template-rows: repeat(8, 1fr);
	grid-column-gap: 0;
	margin-top: 30px;
	}
	#menu{
		width: 100%;
		height: 100%;
		grid-column: 1/3;
		grid-row: 1/2;	
		justify-self: center;

		

	}
	#dashboard-profile{
		display: flex;
		justify-content: center;
		align-items: center;
		padding: 0x;
		height: 50px;


	}
	#profile-text{
		display: flex;
		flex-direction: column;
		
	}
	#dashboard-profile h1 {
		width: 150px;
		font-size: large;
		margin-top: 0;
		
	}
	#dashboard-profile p{
		text-align: left;
		margin-bottom: 0;
		
	}
	#user-photo{
		width: 40px;
		height: 40px;
		align-self: center;
		margin: 0 auto;
		margin-right: 10px;
	}
	#dashboard-nav{
		padding: 0;
		padding-bottom: 10px;
		border-bottom-left-radius: 10px;
		border-top-right-radius: 10px;
	}
	#dashboard-nav ul{
		display: flex;
		text-align: center;
		padding: 0;
		justify-content: space-evenly;
		align-items: center;
		width: 100%;
		border-bottom-right-radius: 10px;

	}
	.nav-link{
		font-size: medium;
	}
	.dashboard-card{
		grid-column: 1/3;

	}
	.card-header img{
		width: 20px

	}
	.card-body{
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		padding-right: 10px;
		padding-left: 10px;
	}
	.previous{
		font-size: small;
	}

}

/*------- end of mobile media queries------------*/

